--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "dev": "next dev --turbopack",
     "dev:debug": "cross-env NEXT_PUBLIC_DEBUG=true next dev --turbopack",
     "dev:silent": "cross-env NEXT_PUBLIC_DEBUG=false next dev --turbopack",
-    "build": "next build --turbopack",
-    "build:debug": "cross-env NEXT_PUBLIC_DEBUG=true next build --turbopack",
+    "build": "next build",
+    "build:turbo": "next build --turbopack",
+    "build:debug": "cross-env NEXT_PUBLIC_DEBUG=true next build",
     "start": "next start",
     "lint": "eslint",
     "migrate-logger": "node scripts/migrate-to-logger.js",
